# HIP-Examples

add4/: CMakeLists.txt
clang/: CMAKELists.txt  CMakeLists.txt  kernels.hip.cpp  kernels.hip.h  math_constant.h  ops.hip.h  pythonInterface.hip.cpp  toy.cu.hip  toy.hip.cpp
clang/obsolete/: pythonInterface.c
clang/perl/: kernels.hip.h  ops.hip.cpp  ops.hip.h  pythonInterface.hip.cpp
cuda-stream/: CMakeLists.txt
openmp-helloworld/: CMakeLists.txt
vectorAdd/: CMakeLists.txt
